--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 .packages
 
 # Conventional directory for build outputs
-build/
+**/build/**/*.*
+!main.dart.js
 
 # Directory created by dartdoc
 doc/api/
